src/stylesheets/components/_flash.scss
//
// Flash
// --------------------------------------------------

.flash {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: $zindex-flash;

  .flash-message {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: $toolbar-height;
    background: $flash-bg;
    color: $flash-color;
    padding: 0 ($space-sm + $line-height-large + $space-sm + 7px);
    line-height: 19px;
    position: relative;

    > span {
      mix-blend-mode: if($theme == "light", multiply, inherit);
      padding: 9px 0;
    }

    & + .flash-message {
      box-shadow: inset 0 1px 0 $flash-shadow-color;
    }
  }

  .btn-primary {
    margin-left: $space-sm;
  }

  .btn-icon {
    position: absolute;
    right: $space-sm + 7px;
    top: 50%;
    transform: translateY(-50%);
    mix-blend-mode: if($theme == "light", multiply, inherit);

    svg {
      color: $flash-close-icon-color;
    }

    &:active {
      svg {
        color: $icon-active-color;
      }
    }
  }
}

